# pureenv

./: .gitignore  README.md  pyproject.toml
pureenv/: __init__.py
tests/: test_pureenv.py
tinyenv/: __init__.py
