[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pureenv"
version = "0.2.0"
description = "Typed environment variable parsing for Python. Zero dependencies. Pure stdlib."
requires-python = ">=3.8"
dependencies = []
keywords = ["environment", "env", "config", "settings", "typed"]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pureenv*"]

[project.urls]
Homepage = "https://github.com/abiget/pureenv"
Repository = "https://github.com/abiget/pureenv"
Issues = "https://github.com/abiget/pureenv/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
